# leaf-disk-gen

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  DoxygenHeader.html  DoxygenStyle.css  LICENSE  README.md  Rakefile
docs/: _config.yml  index.md
docs/_includes/: copy.html  head.html  return.html
docs/_layouts/: page.html
docs/doxygen/html/: DoxygenFix.js  annotated.html  classes.html  classld_1_1BeckmannLeafAngleDistribution-members.html  classld_1_1BeckmannLeafAngleDistribution.html  classld_1_1BeckmannLeafAngleDistribution__inherit__graph.map  classld_1_1BeckmannLeafAngleDistribution__inherit__graph.md5  classld_1_1IsotropicLidfLeafAngleDistribution-members.html  classld_1_1IsotropicLidfLeafAngleDistribution.html  classld_1_1IsotropicLidfLeafAngleDistribution__inherit__graph.map  classld_1_1IsotropicLidfLeafAngleDistribution__inherit__graph.md5  classld_1_1LeafAngleDistribution-members.html  classld_1_1LeafAngleDistribution.html  classld_1_1LeafAngleDistribution__inherit__graph.map  classld_1_1LeafAngleDistribution__inherit__graph.md5  classld_1_1LeafDisk-members.html  classld_1_1LeafDisk.html  classld_1_1TrigonometricLeafAngleDistribution-members.html  classld_1_1TrigonometricLeafAngleDistribution.html  classld_1_1TrigonometricLeafAngleDistribution__inherit__graph.map  classld_1_1TrigonometricLeafAngleDistribution__inherit__graph.md5  classld_1_1TrowbridgeReitzLeafAngleDistribution-members.html  functions.html  (+35 more)
include/leaf-disk-gen/: common.hpp  leaf_angle_distribution.hpp  leaf_disk.hpp
src/: leaf_angle_distribution.cpp  leaf_disk.cpp  main.cpp
